Update company-specific config variables

--- a/htdocs/_config.yml
+++ b/htdocs/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
+title: Savas Labs
+email: chris@savaslabs.com
+url: http://savaslabs.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 # Color settings (hex-codes without the leading hash-tag)
@@ -12,7 +12,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Savas Labs
   location: Location
   social: Around the Web
   credits: Credits
@@ -32,11 +32,11 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 824 Burch Ave.
+  - line: Durham, NC 27701
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'Should we give jekyll credits here?'
 
 # Build settings
 markdown: kramdown
