--- a/htdocs/_config.yml
+++ b/htdocs/_config.yml
@@ -6,9 +6,9 @@ description: "Write an awesome description for your new site here. You can edit 
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: E9168C
+  secondary: FF8E1D
+  secondary-dark: 94115E
 
 # Footer settings
 footer:
