--- a/_data/profiles.yml
+++ b/_data/profiles.yml
@@ -6,9 +6,9 @@
   bio: 
   >
     Chris Russo has been a professional web developer since 2007 and made his
-    first website on geocities.com when he was 11. He was a big fan of <blink></blink>
-    was deeply saddened when it became a deprecated element
-    (https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blink).
+    first website on geocities.com when he was 11. He was a big fan of the <a
+    href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blink">blink</a>
+    element and was deeply saddened when it became a deprecated element.
     For Savas, Chris most enjoys providing bespoke solutions for clients,
     and writing in the third person. When Chris is not behind the computer,
     he’s probably doing something related to a bicycle. He is the Board President
@@ -28,7 +28,9 @@
     daikon amaranth tatsoi tomatillo melon azuki bean garlic. Gumbo beet greens
     corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts
     fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber
-    earthnut pea peanut soko zucchini.
+    earthnut pea peanut soko zucchini. Brussels sprout coriander water chestnut
+    gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth
+    salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.
 
 - name: Dan Murphy
   firstname: Dan
@@ -74,5 +76,5 @@
     Besides furiously studying to become a computer geek, Anne enjoys cooking, playing
     old Zelda games, and all things musical. She plays piano (and occasionally ukulele)
     in local bands My Brother, My Sister and Jon Sebastian and the Tresspassers. The
-    latter band had a song featured on NPR Music's Favorite Songs of 2014, which you can
-    listen to (here.)[http://jonsebastian.bandcamp.com/track/nightmare-sisters]
+    latter band had a <a href="http://jonsebastian.bandcamp.com/track/nightmare-sisters">song</a>
+    featured on NPR Music's Favorite Songs of 2014.
