--- a/_config.yml
+++ b/_config.yml
@@ -20,21 +20,21 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/savas_labs
   - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://bitbucket.org/savaslabs
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/savaslabs
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 824 Burch Ave.
+  - line: American Underground
+  - line: 201 W Main St.
   - line: Durham, NC 27701
-  - line: (919) 432-4660
-
 
 # Credits content
-credits: 'Should we give jekyll credits here?'
+credits:
+  - <a href="http://jekyllrb.com/">Jekyll</a>
 
 # Build settings
 markdown: kramdown
