SAV-16: update profiles and add picures

--- a/_data/profiles.yml
+++ b/_data/profiles.yml
@@ -39,13 +39,14 @@
   modal-id: 3
   bio:
   >
-    Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi
-    amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale.
-    Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root
-    water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale
-    pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut
-    gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth
-    salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.
+    Dan has worked as a web developer for the past two years specializing in the Drupal
+    platform, developing back-end solutions and implementing responsive front-end designs.
+    When he's not nerding-out over the latest advancements in web technology, Dan teaches
+    math as an adjunct instructor for Northeastern University. He also loves to spend his
+    free time rock climbing, snowboarding, and generally enjoying the great outdoors.
+    Prior to web development, Dan worked for a multinational aerospace and defense company
+    as a mechanical engineer. He received his B.S. in mechanical engineering from Tufts
+    University and his M.B.A. from Babson College.
 
 - name: Tim Stallmann
   firstname: Tim
@@ -54,13 +55,15 @@
   modal-id: 4
   bio:
   >
-    Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery.
-    Bunya nuts black eyed pea prairie turnip leek lentil turnip greens parsnip. Sea
-    lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut
-    pea sierra leone bologi leek soko chicory celtuce parsley jÃ­cama salsify. Celery
-    quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram
-    celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot
-    horseradish carrot squash brussels sprout chard.
+    Tim Stallmann is a cartographer and web developer. His web development experience dates
+    all the way back to the last millennium, back when frames were in fashion. Tim fell
+    into Drupal via a web mapping project and has been enjoying exploring the possibilities
+    of that framework and building his web skills with the Savas team. Outside of work, Tim
+    is an avid <a href="http://cakeyear.tumblr.com">baker</a>, and active in social justice
+    work. He's a founding member of the
+    <a href="http://www.countercartographies.org">Counter-Cartographies Collective</a>
+    and part of the <a href="http://www.ourmaps.net">OurMaps project</a>. He has an MA in
+    Mathematics from Duke University, and an MA in Geography from UNC Chapel Hill.
 
 - name: Anne Tomasevich
   firstname: Anne
@@ -69,9 +72,9 @@
   modal-id: 5
   bio:
   >
-    Anne Tomasevich studied engineering and worked at a Contract Research Organization
-    for five years before realizing that she actually wants to be a web developer. She
-    joins Savas as a fairly new developer with an interest in the front end, particularly
+    Anne Tomasevich received a B.S. in textile engineering and worked at a Contract Research
+    Organization for five years before realizing that she actually wants to be a web developer.
+    She joins Savas as a fairly new developer with an interest in the front end, particularly
     Sass and CSS3. She just read a book about CSS3 and is inordinately excited about it.
     Besides furiously studying to become a computer geek, Anne enjoys cooking, playing
     old Zelda games, and all things musical. She plays piano (and occasionally ukulele)
