SAV-11: remove credits section

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,6 @@ footer:
   copyright: Savas Labs
   location: Location
   social: Around the Web
-  credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -31,10 +30,7 @@ address:
   - line: American Underground
   - line: 201 W Main St.
   - line: Durham, NC 27701
-
-# Credits content
-credits:
-  - <a href="http://jekyllrb.com/">Jekyll</a>
+  - line: (919) 432-4660
 
 # Build settings
 markdown: kramdown
