--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: "Write an awesome description for your new site here. You can edit 
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: A10564
-  secondary: F7D611
+  primary: F7D611
+  secondary: A10564
   secondary-dark: F6433E
 
 # Footer settings
