SAV-16: finalize profiles

--- a/_data/profiles.yml
+++ b/_data/profiles.yml
@@ -12,9 +12,9 @@
     For Savas, Chris most enjoys providing bespoke solutions for clients, and writing in
     the third person. When Chris is not behind the computer, he’s probably doing something
     related to a bicycle. He is the Board President of nonprofit hospitality network WarmShowers.org,
-    he serves on the board of his local bicycle advocacy organization Bike Durham, he founded
-    a bicycle-powered food scraps recycling company called Tilthy Rich Compost, and rode his bicycle
-    6,000 miles across the U.S. in the summer of 2008.
+    serves on the board of his local bicycle advocacy organization Bike Durham, founded a
+    bicycle-powered food scraps recycling company called Tilthy Rich Compost, and rode his
+    bicycle 6,000 miles across the U.S. in the summer of 2008.
 
 - name: Kosta Harlan
   firstname: Kosta
