--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,10 @@ description: "Savas Labs, web developers in Durham, North Carolina"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: F7D611
+  primary: F4D1A6
   secondary: 14133B
-  secondary-dark: A10564
+  secondary-dark: 9E023B
+  accent: F6433E
 
 # Footer settings
 footer:
@@ -34,7 +35,7 @@ address:
 
 # Contact information
 contact:
-  - line: <a href="mailto:info@savaslabs.com">info@savaslabs.com</a>
+  - line: <a href="mailto:info@savaslabs.com" class="accent-hover">info@savaslabs.com</a>
   - line: (919) 432-4660
 
 # Build settings
