--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Savas Labs, web developers in Durham, North Carolina"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  light: F4D1A6 # beige
+  light: c8ddf8 # light blue
   medium: 9E023B # fuschia
   dark: 14133B # dark blue
   accent: F6433E # orange
