It's THE MIT Press.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -4,7 +4,7 @@
   modal-id: 1
   description: 
 
-- name: MIT Press
+- name: The MIT Press
   classname: mitpress
   logo: mitpress_logo_brand.png
   modal-id: 2
