--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Savas Labs, web developers in Durham, North Carolina"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  light: c8ddf8 # light blue
+  light: c8ddf8 # light blue. If you update this, update line 248 of main.css too.
   medium: 9E023B # fuschia
   dark: 14133B # dark blue
   accent: F6433E # orange
