--- a/_config.yml
+++ b/_config.yml
@@ -44,3 +44,34 @@ permalink: pretty
 
 # To avoid errors when using Travis-CI
 exclude: [vendor]
+
+# Prose configuration
+prose:
+  rooturl: '_posts'
+  siteurl: 'http://savaslabs.com'
+  relativeLinks: 'http://savaslabs.com/links.jsonp'
+  media: 'media'
+  metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Title"
+          value: ""
+          type: "text"
+      - name: "author"
+        field:
+          element: "text"
+          label: "Author"
+          value: ""
+          type: "text"
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Choose Tags"
+          alterable: true
