--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,10 @@ permalink: pretty
 # To avoid errors when using Travis-CI
 exclude: [vendor]
 
+# Blog configuration
+paginate: 5
+paginate_path: "/blog/page:num/"
+
 # Prose configuration
 prose:
   rooturl: '_posts'
