SAV-18: Expand portfolio grid to 6 items.
And fix image sizes that were causing issues.

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -19,10 +19,21 @@
   description: |
     <a href="http://cognet.mit.edu">MIT Press CogNet</a> is the essential online resource for students and scholars in the brain and cognitive sciences. Since its launch in 2000, it quickly became the premiere source for those engaged in highly-cited, cutting-edge research. Savas developers built out the Drupal theme design provided by MIT Press for the relaunch of the site in Drupal 7 (coming later in 2015), and refactored legacy code to use Drupal 7 APIs and follow best practices.
 
+- name: Tilthy Rich Compost
+  classname: trc
+  logo: trc_logo_brand.png
+  modal-id: 4
+  description:
+
 - name: Transaction Advisors
   classname: transactionadvisors
   logo: transactionadvisors_logo_brand.png
-  modal-id: 4
+  modal-id: 5
   description: |
     <a href="http://www.transactionadvisors.com"><em>Transaction Advisors</em></a> is a prestigious technical journal that publishes select white papers, technical articles, and research studies on the critical issues impacting corporate transaction planning, structuring, and execution. Savas provides Drupal development and theming services for Transaction Advisors, working closely with the editorial management to implement new features and designs.
   
+- name: CW Con
+  classname: cwcon
+  logo: cwcon_logo_brand.png
+  modal-id: 6
+  description:
