SAV-31: Hide twitter link in footer temporarily.

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/savas_labs
+  # - title: twitter
+    # url: http://twitter.com/savas_labs
   - title: bitbucket
     url: https://bitbucket.org/savaslabs
   - title: github
